address-book-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-book
spec:
  selector:
    matchLabels:
      app: address-book
  replicas: 1
  template:
    metadata:
      labels:
        app: address-book
    spec:
      containers:
        - name: address-book
          image: ocebr/address-book:v1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: address-book-service
spec:
  selector:
    app: address-book
  type: NodePort
  ports:
    - protocol: TCP
      port: 8084
      nodePort: 30700
      targetPort: 8084
