chat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  selector:
    matchLabels:
      app: chat
  replicas: 1
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: ocebr/webrtc:1.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
