enrolement-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrolement
spec:
  selector:
    matchLabels:
      app: enrolement
  replicas: 1
  template:
    metadata:
      labels:
        app: enrolement
    spec:
      volumes:
        - name: enrolement-config-file-volume
          configMap:
            name: enrolement-config-file

      containers:
        - name: enrolement
          image: ocebr/enrolement:1.4

          ports:
            - containerPort: 8082
          volumeMounts:
            - name: enrolement-config-file-volume
              mountPath: /app/.env
              subPath: .env
---
apiVersion: v1
kind: Service
metadata:
  name: enrolement-service
spec:
  selector:
    app: enrolement
  type: NodePort
  ports:
    - protocol: TCP
      port: 8082
      nodePort: 30501
      targetPort: 8082
