front.yaml

apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: front 
spec: 
  selector: 
    matchLabels: 
      app: front 
  replicas: 1 
  template: 
    metadata: 
      labels: 
        app: front 
    spec: 
      containers: 
      - name: front 
        image: ocebr/front:1.5
        imagePullPolicy: Always
        ports: 
        - containerPort: 80

---

apiVersion: v1 
kind: Service 
metadata: 
  name: front-service 
spec: 
  selector: 
    app: front 
  type: NodePort 
  ports: 
    - protocol: TCP 
      port: 80 
      nodePort: 30900 
      targetPort: 80
