kdc-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: kdc
spec: 
  selector: 
    matchLabels: 
      app: kdc
  replicas: 1 
  template: 
    metadata: 
      labels: 
        app: kdc
    spec: 
      containers: 
      - name: kdc
        image: ocebr/kdc:1.0
        imagePullPolicy: Always
        ports: 
        - containerPort: 8040

---

apiVersion: v1 
kind: Service 
metadata: 
  name: kdc-service 
spec: 
  selector: 
    app: kdc
  ports: 
    - protocol: TCP 
      port: 8040
      targetPort: 8040
