reverse-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse
  labels:
    app: reverse
spec:
  selector:
    matchLabels:
      app: reverse
  replicas: 1
  template:
    metadata:
      labels:
        app: reverse
    spec:
      containers:
        - name: nginx
          image: reverse-proxy:1.18
          imagePullPolicy : IfNotPresent
          ports:
          - containerPort: 4201
         


---
    

kind: Service
apiVersion: v1
metadata:
  name: reverse-service
spec:
  selector:
    app: reverse
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4201
