ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: yolo-ingress
spec:
  rules:
  - host: yoloooo.com
    http:
      paths:
      - path: /app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-custom
            port:
              number: 4201
      - path: /app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-custom
            port:
              number: 4200
